1. 修复公告管理BUG 2. 增加监控报警信息标签

--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -100,6 +100,8 @@
         laydate.render({elem: "#iPopWindowEndTime", type: "datetime", value: parent.editdata.sPopWindowEndTime});
       } else {
         $('#popWindowEndTime').addClass('layui-hide');
+        $('input[name=sPopWindowEndTime]').val("");
+        $('input[name=sPopWindowEndTime]').attr("lay-verify", "");
       }
 
       $("input[name='sTitle']").val(parent.editdata.sTitle);
