--- a/front/pages/gm/res-add.html
+++ b/front/pages/gm/res-add.html
@@ -24,8 +24,8 @@
           <div class="layui-form-mid">-</div>
           <label class="layui-form-label">可获得途径</label>
           <div class="layui-input-inline">
-            <div id="action"></div>
-		      </div>
+            <div id="action" style="width: 800px"></div>
+          </div>
 		    </div>
 		  </div>
       <div class="layui-form-item">
@@ -49,6 +49,14 @@
       let action = xmSelect.render({
         el: '#action',
         name: 'aciton',
+        filterable: true,
+        delay: 500,
+        autoRow: true,
+        height: "800px",
+        toolbar:{
+            show: true,
+            list: ['CLEAR']
+        },
         prop: {
           value: 'vaule',
           name: 'name',
@@ -58,26 +66,19 @@
         layVerType: 'tips',
         on: function(data){
           //arr:  当前多选已选中的数据
-          let arr = data.arr;
+          arr = data.arr;
           //change, 此次选择变化的数据,数组
           let change = data.change;
           //isAdd, 此次操作是新增还是删除
           let isAdd = data.isAdd;
-          if(isAdd){
-            var allItem = change.find(function(item){
-              return item.iId === 99999;
-            })
-            if(allItem){
-              return [allItem];
-            }
-            allItem = arr.find(function(item){
-              return item.iId === 99999;
-            })
-            if(allItem){
-              return change;
-            }
-          }
         },
+        hide() {
+        layer.open({
+            title: '监控数量',
+            content: '本次选择的监控项数量为: ' + arr.length + " 条" ,
+            offset: 'auto'
+          });
+        }
       });
      
       okUtils.ajax("/api/gm/res/actionlist", "get", null, false).done(function (response) {
@@ -90,8 +91,7 @@
       var param;
       form.on('submit(add)', function (data) {
         let actionStr = action.getValue('valueStr')
-        let actionNameStr = action.getValue('nameStr')
-        let param = {iResId: data.field.iResId, sAction: actionStr, sActionName: actionNameStr};
+        let param = {iResId: data.field.iResId, sAction: actionStr};
         okUtils.ajax("/api/gm/res/add", "post", param, true).done(function (response) {
             okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
