--- a/front/pages/gm/res-err-detail.html
+++ b/front/pages/gm/res-err-detail.html
@@ -30,9 +30,10 @@
     let okLayer = layui.okLayer;
     let $ = layui.jquery;
     let laydate = layui.laydate;
+    let form = layui.form;
     okLoading.close();
 
-    let detailTable = table.render({
+      detailTable = table.render({
       elem: "#tableId",
       url: "/api/gm/res_err/err_detail",
       where: { ErrResId: parent.errResId, ErrTime: parent.errTime, ErrAction: parent.errAction },
@@ -54,7 +55,7 @@
       //监听提交
       var param;
       form.on('submit(add)', function (data) {
-        let param = {iResId: data.field.iResId, sAction: err_action};
+        let param = {iResId: parent.errResId, sAction: parent.errAction};
         okUtils.ajax("/api/gm/res/add_res_control", "post", param, true).done(function (response) {
             okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
@@ -65,22 +66,22 @@
         return false;
       });
 
-      form.om('submit(addAciton)', function (data){
+      form.on('submit(addAciton)', function (data){
         var actionName;
-        layer.layer.prompt(
-          {title: '输入操作项名称', formType: 1}, function(val, index) {
+        layer.prompt({
+           title: '给监控项取个好记的名字吧', formType: 0}, function(val, index) {
            actionName = val;
+           let param = { sAction: parent.errAction, sActionName: actionName};
+           okUtils.ajax("/api/gm/res/add_res_action", "post", param, true).done(function (response) {
+               okLayer.greenTickMsg(response.data, function () {
+               parent.layer.close(parent.layer.getFrameIndex(window.name));
+               });
+           }).fail(function (error) {
+               console.log(error);
+           });
+           return false;
            layer.close(index);
         });
-        let param = { sAction: data.field.sAction, sActionName: actionName};
-        okUtils.ajax("/api/gm/res/add_res_action", "post", param, true).done(function (response) {
-            okLayer.greenTickMsg(response.data, function () {
-            parent.layer.close(parent.layer.getFrameIndex(window.name));
-          });
-        }).fail(function (error) {
-          console.log(error);
-        });
-        return false;      
       })    
   })
 </script>
