--- a/front/pages/gm/dir-edit.html
+++ b/front/pages/gm/dir-edit.html
@@ -66,9 +66,9 @@
           <label class="layui-form-label">手动状态</label>
           <div class="layui-input-inline">
             <select name="iManualZoneStatus">
-              <option value="1">畅通</option>
-              <option value="2">拥挤</option>
-              <option value="3">繁忙</option>
+              <option value="1">流畅</option>
+              <option value="2">忙碌</option>
+              <option value="3">爆满</option>
               <option value="4">维护</option>
             </select>
           </div>
