--- a/front/pages/game/client-err-detail.html
+++ b/front/pages/game/client-err-detail.html
@@ -36,9 +36,8 @@
       },
       cols: [[
         {field: "err_time", title: "报错时间", width: 150, align: "center"},
-        {field: "zone_id", title: "区服id", width: 100, align: "center"},
-        {field: "role_id", title: "角色id", width: 100, align: "center"},
-        {field: "err_info", title: "报错信息"}
+        {field: "zone_id", title: "区服id", align: "center"},
+        {field: "role_id", title: "角色id", align: "center"},
       ]],
       toolbar: true,
       defaultToolbar: ['filter', 'print', 'exports'],
