优化页面与增加监控操作

--- a/front/pages/game/client-err-detail.html
+++ b/front/pages/game/client-err-detail.html
@@ -34,6 +34,8 @@
       text: {
         none: '暂无相关数据',
       },
+      limit: 10,
+      page: true,
       cols: [[
         {field: "err_time", title: "报错时间", width: 150, align: "center"},
         {field: "zone_id", title: "区服id", align: "center"},
