--- a/front/pages/gm/res-err.html
+++ b/front/pages/gm/res-err.html
@@ -66,7 +66,18 @@
       page: true,
       cols: [[
         {field: "err_time", title: "报错时间", width: 120, align: "center"},
-        {field: "err_res_id", title: "报错资源id"},
+        { 
+          field: "err_res_id", width:80, title: "资源ID", align: "center", templet: function(d) {
+            let ret = '';
+            switch(d.err_res_id) {
+              case '1': ret = '金币'; break;
+              case '2': ret = '钻石'; break;
+              default:
+                ret = '未知道具';
+            }
+            return ret;
+          } 
+        },
         {field: "err_action_name", title: "报错操作项"},
         {field: "err_times", title: "报错次数", width: 120, align: "center"},
         {title: "操作", width: 150, align: "center", templet: "#operationTpl", fixed: 'right'}
