--- a/front/pages/gm/res-err-detail.html
+++ b/front/pages/gm/res-err-detail.html
@@ -46,7 +46,7 @@
         {field: "zone_id", title: "区服id", width: 100, align: "center"},
         {field: "role_id", title: "角色id", width: 100, align: "center"},
         { 
-          field: "err_res_id", width:80, title: "资源ID", align: "center", templet: function(d) {
+          field: "err_res_id", width:100, title: "资源类型", align: "center", templet: function(d) {
             let ret = '';
             switch(d.err_res_id) {
               case '1': ret = '金币'; break;
