--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -97,8 +97,9 @@
     editor.config.menus = [
       'undo',
       'redo',
+      'fontSize',
       'myColorKey',
-      'FonSizeKey',
+     // 'FonSizeKey',
     ]
 
     editor.create();
