--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -29,9 +29,10 @@
         <div class="layui-input-block">
 <!--          <textarea name="sContent" placeholder="请输入内容" class="layui-textarea" lay-verify="required"-->
 <!--            lay-verType="tips"></textarea>-->
-
+            <div style="width:480px">
           <div id="rContnet">
           </div>
+            </div>
             <div id="test">Testsss</div>
         </div>
       </div>
@@ -110,10 +111,9 @@
     editor.config.menus = [
         'undo',
         'redo',
+        'fontSize',
         'myColorKey',
-        'FonSizeKey',
     ]
-
     editor.create();
 
     $("#test").on("click",function(){
@@ -131,7 +131,7 @@
       console.log(ouputStr);
     });
 
-    let htmlTest = '<span style="font-size: 22px;"><p>erererererererererererer</p><p>trhhhhhtr&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<font color="#bb1212">htrrrrrrrrrr</font></p></span>';
+    let htmlTest = '<p>mjhhhhhhhhhhh myuuu</p><p><font size="4">ymuuuu<font color="#a927c9">u</font></font><font size="5" color="#a927c9">uuuu</font><font size="7"><font color="#a927c9">u</font><font color="#131263">u</font>uum<font color="#bb3232">uyyyyy</font>yyy</font><font size="4">yyyyyyy</font></p><p><font size="4">啊啊啊啊啊啊啊啊啊啊啊啊啊啊访问肥肉二哥日癸壬癸俄国人骨腭</font><font size="5"><font color="#dd1e1e">骨而归颚骨人格二哥</font>日个二</font><font color="#331387" style="font-size: 1em;"><font size="5">哥日</font><font size="4">葛瑞格热</font></font><font size="4">狗二个人二哥日</font></p>';
 
     editor.txt.html(htmlTest);
 
