--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -37,6 +37,7 @@
           { field: "id", title: "ID" },
           { field: "sTitle", title: "标题", align: "center" },
           { field: "sContent", title: "内容" },
+          { field: "sHtmlContent", title: "html内容" },
           { field: "sBeginTime", title: "开始时间", align: "center" },
           { field: "sEndTime", title: "结束时间", align: "center" },
           {
