--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -148,6 +148,7 @@
         }
 
         let jsonData = editor.txt.getJSON();
+        console.log(jsonData);
         let ouputStr = ExecuteJsonData(jsonData);
 
         data.field.sContent = ouputStr;
