--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -96,7 +96,13 @@
       'undo',
       'redo',
       'fontSize',
+      'foreColor',
       'myColorKey',
+    ]
+    editor.config.colors = [
+    '#955619',
+    '#ff0000',
+    '#cd7540',
     ]
     editor.create();
 
