--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -97,7 +97,13 @@
         'undo',
         'redo',
         'fontSize',
+        'foreColor',
         'myColorKey',
+    ]
+    editor.config.colors = [
+    '#955619',
+    '#ff0000',
+    '#cd7540',
     ]
     editor.create();
 
