--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -6,6 +6,7 @@
   <title>编辑公告</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="/css/oksub.css">
+  <link rel="stylesheet" href="/css/editorMenu.css">
 </head>
 
 <script src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script>
@@ -90,21 +91,7 @@
   </div>
   <script src="/lib/layui/layui.js"></script>
   <script>
-    const editor = new E('#rContnet')
-    //配置菜单栏，删减菜单，调整顺序
-    editor.config.menus = [
-      'undo',
-      'redo',
-      'fontSize',
-      'foreColor',
-      'myColorKey',
-    ]
-    editor.config.colors = [
-    '#955619',
-    '#ff0000',
-    '#cd7540',
-    ]
-    editor.create();
+    const editor = getDefaultEditor('#rContnet')
 
     layui.use(['form', 'laydate', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
