--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -6,6 +6,7 @@
   <title>公告管理</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="../../css/oksub.css">
+  <link rel="stylesheet" href="/css/editorMenu.css">
   <script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
 </head>
 
