--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -32,6 +32,14 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">内容2</label>
+        <div class="layui-input-block">
+          <textarea name="sContent" placeholder="请编辑内容" class="layui-textarea" lay-verify="required"
+                    lay-verType="tips"></textarea>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <label class="layui-form-label">开始时间</label>
         <div class="layui-input-block">
           <input type="text" name="sBeginTime" id="iBeginTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
@@ -94,20 +102,11 @@
   <script>
     const editor = getDefaultEditor('#rContnet')
 
-    // $("#test").on("click",function(){
-    //
-    //     console.log(editor.selection.getSelectionContainerElem().elems[0]);
-    //     console.log(editor.selection.getSelectionStartElem().elems[0]);
-    //     console.log(editor.selection.getSelectionEndElem().elems[0]);
-    //   console.log(editor.txt.text());
-    //   console.log(editor.txt.html());
-    //   console.log(JSON.stringify(editor.txt.getJSON()));
-    //   console.log(editor.txt.getJSON());
-    //
-    //   var jsonData = editor.txt.getJSON();
-    //   let ouputStr = ExecuteJsonData(jsonData);
-    //   console.log(ouputStr);
-    // });
+    editor.config.onchange = function (newHtml) {
+      let jsonData = editor.txt.getJSON();
+      let ouputStr = ExecuteJsonData(jsonData);
+      $("#sContent").val(ouputStr);
+    }
 
     layui.use(['form', 'laydate', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
@@ -154,10 +153,9 @@
           return false;
         }
 
-        let jsonData = editor.txt.getJSON();
-        let ouputStr = ExecuteJsonData(jsonData);
-        console.log(ouputStr);
-        data.field.sContent = ouputStr;
+        //let jsonData = editor.txt.getJSON();
+        //let ouputStr = ExecuteJsonData(jsonData);
+        //data.field.sContent = ouputStr;
         data.field.sHtmlContent = editor.txt.html();
 
         okUtils.ajax("/api/gm/bulletin/add", "post", data.field, true).done(function (response) {
